Fixed RB spacing and h1 tags
Fixed large rb spacing with negative margin (unsure what it's from as it was on .field-radio-button which had no margins/padding).

Also switched h1 tags to h2s for better semantics

--- a/styles.css
+++ b/styles.css
@@ -364,17 +364,14 @@ input[type="radio"] {
 }
 
 .field-radio-button {
-  margin: -12px;
+  margin: -12px -12px 0px -12px;
 }
 
 .field-radio-button label {
   position: relative;
   cursor: pointer;
   text-indent: -30px; /* To prevent second line wrapping under rb selector */
-  padding-top: 7px;
-  padding-bottom: 7px;
-  padding-left: 40px;
-  padding-right: 5px;
+  padding: 7px 5px 7px 40px;
   display: inline-block;
   width: 100%;
 }
